# gaming_rpg

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
src/engine/: application.cpp  application.hpp  engine_context.cpp  engine_context.hpp  fwd.hpp  tools.cpp  tools.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/engine/imgui/: imgui_backend.cpp  imgui_backend.hpp
src/engine/renderer/: surface.cpp  surface.hpp  vulkan_context.cpp  vulkan_context.hpp
src/game/: game.cpp  game.hpp  main.cpp
